2008-02-11  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader.dll:
	  New version

2008-02-11  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	  Don't access version, if its not initialized yet.

2008-02-10  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader.dll:
	  New version

2008-02-10  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/BuzzMachineCallbacks.cpp:
	* src/BuzzMachineLoader/BuzzMachineCallbacks.h:
	* src/BuzzMachineLoader/BuzzMachineCallbacksPre12.cpp:
	* src/BuzzMachineLoader/BuzzMachineCallbacksPre12.h:
	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	* src/BuzzMachineLoader/BuzzMachineLoader.h:
	* src/BuzzMachineLoader/MachineInterface.h:
	* src/BuzzMachineLoader/dsplib.h:
	  Rebuild under windows.
	
2008-02-07  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* dllwrapper1/wine/win32.c:
	  More crash info. Playing with CXX exception handler.

2008-02-06  Stefan Kost  <ensonic@users.sf.net>

	* README:
	  Some wine comments. Not sure if this is used at all.

2008-02-04  Stefan Kost  <ensonic@users.sf.net>

	* README:
	* dllwrapper1/wine/pe_image.c:
	* dllwrapper1/wine/win32.c:
	  Our wine wrapper can resolve filenames incasesensitive. No more
	  symlinks needed! Yay.

2007-12-12  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/BuzzMachineVirtualCallbacks.cpp:
	  Take this one too.

2007-12-12  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/BuzzMachineCallbacks.cpp:
	  More build fixes.

2007-12-12  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/BuzzMachineCallbacksPre12.cpp:
	  More build fixes.

2007-12-12  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/MachineInterface.h:
	  Fix gcc warnings.

2007-12-03  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	  Only create CMachineInput if needed.

2007-11-21  Stefan Kost  <ensonic@users.sf.net>

	* src/Makefile.am: